--- a/style.css
+++ b/style.css
@@ -444,3 +444,22 @@ body {
   transition: transform 0.8s cubic-bezier(0.65, 0.05, 0.36, 1), opacity 0.8s;
   opacity: 1;
 }
+
+
+.profile-img {
+    display: block;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-top: 10px;
+    object-fit: cover;
+    border: 2px solid #f200ff;
+    box-shadow: 0 0 10px #f200ff, 0 0 20px #b346ff;
+    transition: transform 0.3s, box-shadow 0.3s;
+    cursor: pointer;
+}
+
+.profile-img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 15px #f200ff, 0 0 30px #b346ff;
+}
