--- a/compra.css
+++ b/compra.css
@@ -197,7 +197,7 @@ section, .auth-section, .card {
 }
 
 .form-group label {
-    color: #fff;
+    color: #ffffff;
     margin-bottom: 5px;
 }
 
@@ -207,7 +207,7 @@ section, .auth-section, .card {
     border-radius: 25px;
     border: 1px solid #f200ff;
     background: rgba(255,255,255,0.1);
-    color: #fff;
+    color: #000000;
     font-size: 16px;
 }
 
@@ -224,7 +224,7 @@ section, .auth-section, .card {
 
 .btn-primary {
     background: linear-gradient(45deg,#6a00ff,#f200ff);
-    color: #fff;
+    color: #ffffff;
 }
 
 .btn-primary:hover {
@@ -244,7 +244,7 @@ section, .auth-section, .card {
 /* Rodapé */
 .site-footer {
     background: rgba(43,0,56,0.9);
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
     padding: 20px;
     margin-top: 60px;
